@startuml

title __REPOSITORY's Class Diagram__\n

  package com.epam.training {
    package com.epam.training.delivery {
      package com.epam.training.delivery.repository {
        class DeliveryRepository {
            {static} - SELECT_DELIVERY_BY_ID : String
            - jdbcTemplate : NamedParameterJdbcTemplate
            - simpleJdbcInsert : SimpleJdbcInsert
            + DeliveryRepository()
            - deliveryMapper()
            + createNewScheduledDelivery()
            + createNewSingleDelivery()
            + getDeliveryById()
        }
      }
    }
  }
  

  package com.epam.training {
    package com.epam.training.delivery {
      package com.epam.training.delivery.repository {
        class DeliveryRowMapper {
            + mapRow()
        }
      }
    }
  }
  

  DeliveryRepository -up-|> NamedParameterJdbcDaoSupport
  DeliveryRepository +-down- DeliveryRowMapper
  DeliveryRowMapper -up-|> RowMapper


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
